chore: fix grammar and restructure as maven project

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,6 @@ bin/
 
 ### Mac OS ###
 .DS_Store
-/src/org/gallaghercodedesign/apextsstubgenerator/antlrapex/
-/src/org/gallaghercodedesign/apextsstubgenerator/output/
+/src/main/java/apextsstubgenerator/antlrapex/
+/target/
+/src/main/ts-output/
