--- a/scripts/config.cfg
+++ b/scripts/config.cfg
@@ -1,7 +1,11 @@
+#https://dlcdn.apache.org//commons/cli/binaries/commons-cli-1.9.0-bin.tar.gz
+JAR_DEST_FOLDER="/usr/local/lib/"
+COMMONS_CLI_VERSION="1.9.0"
+COMMONS_CLI_FILENAME="commons-cli-${COMMONS_CLI_VERSION}-bin.tar.gz"
+COMMONS_CLI_FILE_PATH="${JAR_DEST_FOLDER}${COMMONS_CLI_FILENAME}"
 ANTLR_VERSION="4.13.2"
-ANTLR_JAR_DEST_FOLDER="/usr/local/lib/"
 ANTLR_JAR_FILENAME="antlr-${ANTLR_VERSION}-complete.jar"
-FULL_ANTLR_FILE_PATH="${ANTLR_JAR_DEST_FOLDER}${ANTLR_JAR_FILENAME}"
+FULL_ANTLR_FILE_PATH="${JAR_DEST_FOLDER}${ANTLR_JAR_FILENAME}"
 # Define color codes
 RED='\e[31m'
 GREEN='\e[32m'
