--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <repositories>
+        <repository>
+            <id>antlr-repo</id>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>commons-cli</groupId>
@@ -21,8 +27,8 @@
             <version>1.9.0</version>
         </dependency>
         <dependency>
-            <groupId>org.antlr.v4</groupId>
-            <artifactId>antlr-complete</artifactId>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4</artifactId>
             <version>4.13.2</version>
         </dependency>
     </dependencies>
