chore: github workflow upload output jar file to releases

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,30 @@ jobs:
       - name: Build with Maven
         run: mvn clean package
 
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
+      - name: Copy JAR to repo
+        run: cp target/*.jar .
+
+      - name: Get version from pom.xml
+        id: get_version
+        run: echo "::set-output name=VERSION::$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)"
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: apex-to-typescript-converter
-          path: target/*.jar
+          tag_name: v${{ steps.get_version.outputs.VERSION }}
+          release_name: Release ${{ steps.get_version.outputs.VERSION }}
+          draft: false
+          prerelease: true
+
+      - name: Upload JAR to Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./target/*.jar
+          asset_name: apex-to-typescript-converter-${{ steps.get_version.outputs.VERSION }}.jar
+          asset_content_type: application/java-archive
