chore: list out target folder contents for debug workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Build with Maven
         run: mvn clean package
 
-      - name: Copy JAR to repo
-        run: cp target/*.jar .
+      - name: List target directory contents
+        run: ls -la target
 
       - name: Get version from pom.xml
         id: get_version
