--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/*.jar
+          asset_path: ./target/apex-to-typescript-converter-${{ env.VERSION }}.jar
           asset_name: apex-to-typescript-converter-${{ env.VERSION }}.jar
           asset_content_type: application/java-archive
